--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.11.0"
+    "@hapi/joi": "^17.1.1",
+    "@iuv-tools/utils": "^1.0.0-beta.2",
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8"
   },
   "devDependencies": {
     "rollup": "^2.9.1"
